подключение SSL, настройка Nginx и поддержка VMess TCP
- Добавлен Nginx с поддержкой HTTPS и проксированием сертификатов
- Подключены SSL-сертификаты Let's Encrypt в Marzban через переменные среды
- В .env.marzban включены SSL-параметры и рабочий токен Telegram
- Изменена проверка сертификата на `verify_ssl=False` для локального self-signed подключения
- Обновлена версия Marzban до v0.8.4
- Добавлен базовый inbound `VMess TCP` при создании пользователей
- Упрощена структура `proxies` — оставлен только vmess

--- a/.env.marzban
+++ b/.env.marzban
@@ -4,8 +4,10 @@ SUDO_USERNAME = "admin"
 SUDO_PASSWORD = "admin"
 
 # UVICORN_UDS: "/run/marzban.socket"
-# UVICORN_SSL_CERTFILE = "/var/lib/marzban/certs/example.com/fullchain.pem"
-# UVICORN_SSL_KEYFILE = "/var/lib/marzban/certs/example.com/key.pem"
+UVICORN_SSL_CERTFILE = "/etc/marzban/certs/fullchain.pem"
+UVICORN_SSL_KEYFILE = "/etc/marzban/certs/privkey.pem"
+# private для локального сертификата, public 
+UVICORN_SSL_CA_TYPE = "private"
 
 
 # XRAY_JSON = "xray_config.json"
@@ -17,8 +19,8 @@ SUDO_PASSWORD = "admin"
 # XRAY_FALLBACKS_INBOUND_TAG = "INBOUND_X"
 
 
-# TELEGRAM_API_TOKEN = 123456789:AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-# TELEGRAM_ADMIN_ID = 987654321, 123456789
+# TELEGRAM_API_TOKEN = "7653027075:AAFwb19Zs3nDxvtE3ukU6ULPkDdABnRGX_0"
+# TELEGRAM_ADMIN_ID = 202715
 # TELEGRAM_LOGGER_CHANNEL_ID = -1234567890123
 # TELEGRAM_DEFAULT_VLESS_FLOW = "xtls-rprx-vision"
 # TELEGRAM_PROXY_URL = "http://localhost:8080"
