--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,47 @@
 services:
+  nginx:
+    container_name: free_vpn_bot_nginx
+    image: nginx:1.25-alpine
+    ports:
+      - "80:80"
+      - "80:80"
+      - "443:443"
+    networks:
+      - free_vpn_bot
+    restart: always
+    environment:
+      DOMAIN: ${DOMAIN}
+      LOCATION: ${SERVER_URL}
+      CERT_FULLCHAIN_PATH: "/etc/nginx/certs/fullchain.pem"
+      CERT_KEY_PATH: "/etc/nginx/certs/privkey.pem"
+    volumes:
+      - ./etc/nginx/templates:/etc/nginx/templates:ro
+      - ./etc/nginx/conf:/etc/nginx/conf.d
+      - ${CERT_FULLCHAIN_PATH}:/etc/nginx/certs/fullchain.pem
+      - ${CERT_KEY_PATH}:/etc/nginx/certs/privkey.pem
+      - ./certbot/data:/var/www/certbot
   marzban:
-    image: gozargah/marzban:latest
+    image: gozargah/marzban:v0.8.4
     container_name: free_vpn_bot_marzban
     restart: always
     env_file: .env.marzban
     environment:
-      UVICORN_HOST: "marzban"
+      UVICORN_HOST: "0.0.0.0"
       UVICORN_PORT: "8002"
       YOUR_DOMAIN: ${DOMAIN}
     ports:
-      - "0.0.0.0:8002:8002"
-      - "0.0.0.0:8081:8080"
-      - "0.0.0.0:8443:8433"
-      - "0.0.0.0:2053:2053"
-      - "0.0.0.0:2083:2083"
-      - "0.0.0.0:1080:1080"
+      - "127.0.0.1:8002:8002"
     networks:
       - free_vpn_bot
     volumes:
       - marz-storage:/code
       - ./volumes/marzban:/var/lib/marzban
-      - ./etc/letsencrypt:/etc/letsencrypt
       - ./certbot/data:/var/www/certbot
       - /etc/timezone:/etc/timezone:ro
+      - ${CERT_FULLCHAIN_PATH}:/etc/marzban/certs/fullchain.pem
+      - ${CERT_KEY_PATH}:/etc/marzban/certs/privkey.pem
+      - ${CERT_FULLCHAIN_PATH}:${CERT_FULLCHAIN_PATH}
+      - ${CERT_KEY_PATH}:${CERT_KEY_PATH}
     logging:
       driver: "json-file"
       options:
