network settings for production

--- a/.env.marzban
+++ b/.env.marzban
@@ -7,7 +7,7 @@ SUDO_PASSWORD = "admin"
 UVICORN_SSL_CERTFILE = "/etc/marzban/certs/fullchain.pem"
 UVICORN_SSL_KEYFILE = "/etc/marzban/certs/privkey.pem"
 # private для локального сертификата, public 
-UVICORN_SSL_CA_TYPE = "private"
+UVICORN_SSL_CA_TYPE = "public"
 
 
 # XRAY_JSON = "xray_config.json"
