--- a/etc/nginx/conf/default.conf
+++ b/etc/nginx/conf/default.conf
@@ -9,7 +9,7 @@ server {
     listen 127.0.0.1:10000 ssl proxy_protocol;
     http2 on;
 
-    server_name localhost *.localhost;
+    server_name v230854.hosted-by-vdsina.com *.v230854.hosted-by-vdsina.com;
 
     ssl_certificate /etc/nginx/certs/fullchain.pem;
     ssl_certificate_key /etc/nginx/certs/privkey.pem;
@@ -24,16 +24,11 @@ server {
     set_real_ip_from 127.0.0.1;
     real_ip_header proxy_protocol;
 
-    # Редирект HTTP на HTTPS, кроме localhost чтобы работал ngrok
-    location / {
-        if ($host != "localhost") {
-            return 301 https://$host$request_uri;
-        }
-    }
 
 
     location ~* ^/(dashboard|api|sub|statics)(/|$) {
-        proxy_pass http://localhost:8002;
+        proxy_pass https://free_vpn_bot_marzban:8002;
+	proxy_ssl_verify off;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
