--- a/etc/nginx/templates/default.conf.template
+++ b/etc/nginx/templates/default.conf.template
@@ -24,16 +24,11 @@ server {
     set_real_ip_from 127.0.0.1;
     real_ip_header proxy_protocol;
 
-    # Редирект HTTP на HTTPS, кроме localhost чтобы работал ngrok
-    location / {
-        if ($host != "localhost") {
-            return 301 https://$host$request_uri;
-        }
-    }
 
 
     location ~* ^/(dashboard|api|sub|statics)(/|$) {
-        proxy_pass http://$DOMAIN:8002;
+        proxy_pass https://free_vpn_bot_marzban:8002;
+	proxy_ssl_verify off;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
